[Steven] feat(all) - add created by, updated by, and deleted by
